feat(storage): fix S3 small files url managing